# shared_ref

./: .gitignore  LICENSE  README.md  WORKSPACE.bazel
demo/: .gitignore  BUILD.bazel  demo.cpp  demo2.cpp  demo3.cpp  demo_simple.cpp  makefile  nn_demo2  nn_demo_release
include/nnptr/: BUILD.bazel  nnshared.hpp  sref.hpp
src/nnptr/: BUILD.bazel  nnshared.hpp
src/nnshared/: BUILD.bazel  shared.hpp
