load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "nnshared_lib",
    hdrs = glob([
        "*.hpp",
    ]),
    include_prefix = "nnshared/",
    deps = ["//libs/GSL/include/gsl:gsl_lib"]
    #deps = ["//libs:gsl_lib"]
)